[project]
name = "vm_vpn_connector"
version = "0.0.2"
description = "vm_vpn_connector"
authors = ["MVladislav <info@mvladislav.online>"]
license = "GNU AGPLv3"
readme = "README.md"
python = "^36"
homepage = "https://github.com/MVladislav"
repository = "https://github.com/MVladislav/vm-recon"
documentation = "https://github.com/MVladislav/vm-recon"

keywords = ["python3", "pip3", "pyproject.toml"]

classifiers = ["Topic :: Software Development"]

# ----------------------------------------------------
# Requirements
#[dependencies]
#Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }
flake8 = { version = "^3.9.2", python = "^3.6" }
tox = { version = "^3.24.3", python = "^3.6" }
pytest = { version = "^6.2.5", python = "^3.6" }
pytest-cov = { version = "^2.12.1", python = "^3.6" }
mypy = { version = "^0.910", python = "^3.6" }
pylint = { python = "^3.6" }

#[scripts]
#poetry = "infer_pyproject.cli:main"

[build-system]
requires = ["setuptools >= 42.0", "setuptools_scm >= 2.0.0, <3", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------
# tools

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -q --cov=slapping"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "app"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 127
max-complexity = 10
exclude = "build,dist,docs/conf.py,organice/migrations,*.egg-info"

[tool.black]
line-length = 123
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
