[metadata]
name = vm_vpn_connector
version = 0.0.2

author = MVladislav
author_email = info@mvladislav.online

description = vm_vpn_connector
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = python3, pip3, setup.cfg

license = GNU AGPLv3
classifiers =
Topic :: Software Development
Programming Language :: Python :: 3

[options]
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:

[options.data_files]
scripts=scripts/setup.sh,scripts/setup-dev.sh
requirements=requirements.txt

# [options.entry_points]
# console_scripts =
# vm_vpn_connector = app.main:cli

[options.extras_require]
testing =
pytest >=6.0
pytest-cov >=2.0
mypy >=0.910
flake8 >=3.9
tox >=3.24
pylint >= 2.11

[options.package_data]
slapping = py.typed

# ----------------------------------------------------
# tools

[aliases]
test=pytest

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q --cov=slapping
testpaths = tests

[tool.mypy]
mypy_path = "app"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[flake8]
max-line-length = 127
max-complexity = 10
exclude = build,dist,docs/conf.py,organice/migrations,*.egg-info

[pylint]
# Run with: python3 -m pylint --rcfile=setup.cfg `find -regextype egrep -regex '(.*.py)$'`
fail-under=10
max-line-length=127
disable = C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized
